# actix-service

./: Cargo.toml
tutor-cli/: Cargo.toml
tutor-cli/src/: database.sql  main.rs
tutor-db1/: .env  Cargo.toml
tutor-db1/src/: db.rs  handler.rs  lib.rs  main.rs  model.rs  router.rs  state.rs
tutor-db2/: .env  Cargo.toml
tutor-db2/migrations/: 20230306054646_create_table_courses.sql
tutor-db2/scripts/: init_db.sh
tutor-db2/src/: handler.rs  lib.rs  main.rs  router.rs  state.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handler.rs  lib.rs  model.rs  router.rs  state.rs
tutor-nodb/tests/: handler.rs
