[package]
name = "tutor-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
